--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}/*# sourceMappingURL=style.css.map */
