--- a/style.css
+++ b/style.css
@@ -1,5 +1,45 @@
+@font-face {
+  font-family: "Comic Neue";
+  src: url("assets/fonts/Comic_Neue/ComicNeue-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Comic Neue";
+  src: url("assets/fonts/Comic_Neue/ComicNeue-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Comic Neue";
+  src: url("assets/fonts/Comic_Neue/ComicNeue-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Comic Neue";
+  src: url("assets/fonts/Comic_Neue/ComicNeue-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Comic Neue";
+  src: url("assets/fonts/Comic_Neue/ComicNeue-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Comic Neue";
+  src: url("assets/fonts/Comic_Neue/ComicNeue-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+}
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Comic Neue", cursive;
 }
 
 .container {
