--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,51 @@
+@font-face {
+    font-family: 'Comic Neue'; 
+    src: url('assets/fonts/Comic_Neue/ComicNeue-Light.ttf') format('truetype');
+    font-weight: 300; 
+    font-style: normal;
+} // ComicNeue-Light
+
+@font-face {
+    font-family: 'Comic Neue'; 
+    src: url('assets/fonts/Comic_Neue/ComicNeue-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+} // ComicNeue-LightItalic
+
+@font-face {
+    font-family: 'Comic Neue'; 
+    src: url('assets/fonts/Comic_Neue/ComicNeue-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+} // ComicNeue-Regular
+
+@font-face {
+    font-family: 'Comic Neue'; 
+    src: url('assets/fonts/Comic_Neue/ComicNeue-Italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+} // ComicNeue-Italic
+
+@font-face {
+    font-family: 'Comic Neue'; 
+    src: url('assets/fonts/Comic_Neue/ComicNeue-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+} // ComicNeue-Bold
+
+@font-face {
+    font-family: 'Comic Neue'; 
+    src: url('assets/fonts/Comic_Neue/ComicNeue-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+} // ComicNeue-BoldItalic
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: "Comic Neue", cursive;
 }
 
 .container {
