--- a/style.css
+++ b/style.css
@@ -36,13 +36,83 @@
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: "Comic Neue", cursive;
 }
 
+main {
+  display: flex;
+  gap: 2rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0 0 10px 0;
+}
+
+ul > li {
+  margin: 0 0 10px 0;
+  line-height: 150%;
+}
+
+h1 {
+  margin: 5px 0 10px 0;
+}
+
+h2 {
+  margin: 5px 0 10px 0;
+}
+
+h3 {
+  font-size: 20px;
+  margin: 5px 0 10px 0;
+}
+
 .container {
   max-width: 1200px;
+  padding: 0 32px;
   margin: 0 auto;
+}
+
+.header {
+  min-height: 60px;
+}
+
+.nav__item {
+  list-style: none;
+  text-align: center;
+}
+.nav__item:hover {
+  background-color: #000000;
+}
+.nav__link {
+  display: block;
+  width: 100%;
+  padding: 4px 0;
+}
+.nav__link:hover {
+  color: #F1F1F1;
+}
+
+.cv-info {
+  max-width: 70%;
+}
+
+.section__content {
+  padding: 0 0 0 1rem;
+}
+.section__list-item {
+  margin-left: 40px;
+}
+
+.footer {
+  min-height: 60px;
 }/*# sourceMappingURL=style.css.map */
