feat: add styles for text-code

--- a/style.scss
+++ b/style.scss
@@ -129,6 +129,14 @@ h3 {
     }
 }
 
+.code-wrapper {
+    background-color: #f7f7f7;
+    padding: 1rem;
+    margin: 5px 0;
+    border-radius: 10px;
+}
+
+
 .footer {
     min-height: 60px;
 }
