--- a/style.css
+++ b/style.css
@@ -113,6 +113,13 @@ h3 {
   margin-left: 40px;
 }
 
+.code-wrapper {
+  background-color: #f7f7f7;
+  padding: 1rem;
+  margin: 5px 0;
+  border-radius: 10px;
+}
+
 .footer {
   min-height: 60px;
 }/*# sourceMappingURL=style.css.map */
