--- a/style.css
+++ b/style.css
@@ -86,6 +86,14 @@ h3 {
   min-height: 60px;
 }
 
+.sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav {
+  width: 100%;
+}
 .nav__item {
   list-style: none;
   text-align: center;
@@ -122,4 +130,59 @@ h3 {
 
 .footer {
   min-height: 60px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0 1.5rem;
+  }
+  main {
+    flex-direction: column;
+  }
+  .sidebar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1rem;
+  }
+  .cv-info {
+    max-width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+  .cv-profile-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  .cv__photo-frame {
+    width: 100%;
+  }
+  .cv__photo-img {
+    width: 100%;
+    height: auto;
+  }
+  .cv-info {
+    max-width: 100%;
+  }
+}
+@media (max-width: 360px) {
+  .container {
+    padding: 0 1rem;
+  }
+  .section__content {
+    padding: 0 0 0 0.5rem;
+  }
+  .section__list-item {
+    margin-left: 30px;
+  }
+  .cv-info {
+    max-width: 95%;
+  }
 }/*# sourceMappingURL=style.css.map */
