--- a/style.scss
+++ b/style.scss
@@ -98,7 +98,13 @@ h3 {
     min-height: 60px;
 }
 
+.sidebar {
+    display: flex;
+    flex-direction: column;
+}
+
 .nav {
+    width: 100%;
     &__item {
         list-style: none;
         text-align: center;
@@ -139,4 +145,74 @@ h3 {
 
 .footer {
     min-height: 60px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding: 0 1.5rem;
+    }
+
+    main {
+        flex-direction: column;
+    }
+    .sidebar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        gap: 1rem;
+    }
+
+    .cv-info {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .sidebar {
+        display: flex;
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .cv-profile-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+    .cv {
+        &__photo-frame {
+            width: 100%;
+
+        }
+
+        &__photo-img {
+            width: 100%;
+            height: auto;
+        }
+}
+
+
+    .cv-info {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 360px) {
+    .container {
+        padding: 0 1rem;
+    }
+
+    .section {
+        &__content {
+            padding: 0 0 0 0.5rem;
+        }
+    
+        &__list-item {
+            margin-left: 30px;
+        }
+    }
+    .cv-info {
+        max-width: 95%;
+    }
 }
