--- a/style.scss
+++ b/style.scss
@@ -89,13 +89,27 @@ h3 {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     max-width: 1200px;
     padding: 0 32px;
     margin: 0 auto;
 }
 
 .header {
-    min-height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+    gap: 1rem;
+    &__item {
+        position: relative;
+    }
+    &__quote {
+        font-size: 20px;
+        text-align: center;
+    }
 }
 
 .sidebar {
@@ -113,6 +127,7 @@ h3 {
         background-color: #000000;
     }
     &__link {
+        font-size: 20px;
         display: block;
         width: 100%;
         padding: 4px 0;
@@ -144,7 +159,25 @@ h3 {
 
 
 .footer {
-    min-height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+    &__item {
+        position: relative;
+    }
+    &__link {
+        position: absolute;
+        inset: 0;
+    }
+    &__link-year {
+        font-size: 20px;
+        font-weight: 400;
+    }
+    &__img {
+        max-height: 32px;
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -168,6 +201,16 @@ h3 {
 }
 
 @media (max-width: 480px) {
+    .header {
+        &__quote {
+            font-size: 1rem;
+        }
+        &__img {
+            width: auto;
+            height: 32px;
+        }
+    }
+
     .sidebar {
         display: flex;
         flex-direction: column;
@@ -190,8 +233,7 @@ h3 {
             width: 100%;
             height: auto;
         }
-}
-
+    }
 
     .cv-info {
         max-width: 100%;
