--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ h3 {
 .nav__item {
   list-style: none;
   text-align: center;
+  transition: all 0.15s ease-in-out;
 }
 .nav__item:hover {
   background-color: #000000;
@@ -120,6 +121,7 @@ h3 {
   display: block;
   width: 100%;
   padding: 4px 0;
+  transition: all 0.15s ease-in-out;
 }
 .nav__link:hover {
   color: #F1F1F1;
