--- a/style.scss
+++ b/style.scss
@@ -122,6 +122,7 @@ h3 {
     &__item {
         list-style: none;
         text-align: center;
+        transition: all .15s ease-in-out;
     }
     &__item:hover {
         background-color: #000000;
@@ -131,6 +132,7 @@ h3 {
         display: block;
         width: 100%;
         padding: 4px 0;
+        transition: all .15s ease-in-out;
     }
     &__link:hover {
         color: #F1F1F1;
