--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ h3 {
   margin-left: 40px;
 }
 .section__link {
+  text-decoration: underline;
   display: inline-block;
   padding: 0 4px;
   transition: all 0.15s ease-in-out;
