--- a/style.scss
+++ b/style.scss
@@ -151,6 +151,7 @@ h3 {
         margin-left: 40px;
     }
     &__link {
+        text-decoration: underline;
         display: inline-block;
         padding: 0 4px;
         transition: all .15s ease-in-out;
