--- a/style.scss
+++ b/style.scss
@@ -210,7 +210,7 @@ path {
 }
 
 /* RS SCHOOL svg */
-// иноче фон JS - черный
+// иначе фон JS - черный
 #mask0_1_7 path {fill: #FFF;} 
 #mask1_1_7 path {fill: #FFF;}
 /* [END] RS SCHOOL svg */
@@ -273,6 +273,58 @@ path {
     .cv-info {
         max-width: 100%;
     }
+
+    .burger {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+        min-height: 32px;
+    
+        &__icon-link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 32px;
+            width: 32px;
+            margin: 0 auto;
+        }
+    
+        &__icon {
+            background-color: #000000;
+            display: block;
+            top: 50%;
+            right: 50%;
+            width: 20px;
+            height: 2px;
+            transition: transform 0.5s ease-in-out; // Переход только для transform
+        }
+        &__icon::before {
+            content: "";
+            background-color: #000000;
+            display: block;
+            width: 20px;
+            height: 2px;
+            transform: translateY(-5px);
+            transition: transform 0.3s ease-in-out; // Переход только для transform
+        }
+        &__icon::after {
+            content: "";
+            background-color: #000000;
+            display: block;
+            width: 20px;
+            height: 2px;
+            transform: translateY(3px);
+            transition: transform 0.3s ease-in-out; // Переход только для transform
+        }
+    
+        &__list { // список выключен
+            overflow: hidden;
+            max-height: 0;
+            transition: max-height 1s;
+        }
+    }
 }
 
 @media (max-width: 360px) {
@@ -294,3 +346,22 @@ path {
     }
 }
 
+.burger--open { // для burger__icon
+    transform: rotate(45deg);
+    transition: transform 0.5s ease-in-out; // Переход только для transform
+    
+    &::before {
+        transform: translateY(0) rotate(270deg);
+        transition: transform 0.5s ease-in-out; // Переход только для transform
+    }
+    
+    &::after {
+        transform: translateY(-2px);
+        transition: transform 0.5s ease-in-out; // Переход только для transform
+    }
+}
+
+.burger-list--visible {
+    display: block;
+    max-height: 300px;
+}
