--- a/style.scss
+++ b/style.scss
@@ -346,6 +346,34 @@ path {
     }
 }
 
+@media (max-width: 320px) {
+    .container {
+        padding: 0 0.3rem;
+    }
+
+    .header__img {
+        display: none;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .section__list-item {
+        list-style: none;
+        margin-left: 0;
+    }
+
+    .code-wrapper {
+        overflow: auto;
+    }
+
+    .footer {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+}
+
 .burger--open { // для burger__icon
     transform: rotate(45deg);
     transition: transform 0.5s ease-in-out; // Переход только для transform
