feat: add smooth scroll behavior for anchor links
- add javascript implementation
- add css implementation

--- a/style.scss
+++ b/style.scss
@@ -54,6 +54,10 @@ $listItemMargin: 0 0 10px 0;
     padding: 0;
 }
 
+html { // на всякий случай =)
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: $pageFontFamily;
 }
