feat: add button to top with styles and functions

--- a/style.css
+++ b/style.css
@@ -199,6 +199,28 @@ path {
   max-height: 32px;
 }
 
+.scroll-to-top-btn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  z-index: 1;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: all 0.15s linear;
+}
+
+.scroll-to-top-btn:hover {
+  background-color: #000;
+}
+
+.scroll-to-top-btn:hover path {
+  fill: white;
+}
+
 /* RS SCHOOL svg */
 #mask0_1_7 path {
   fill: #FFF;
@@ -224,6 +246,9 @@ path {
   }
   .cv-info {
     max-width: 100%;
+  }
+  .scroll-to-top-btn {
+    right: 1px;
   }
 }
 @media (max-width: 480px) {
