--- a/style.scss
+++ b/style.scss
@@ -145,6 +145,7 @@ h3 {
 
 .cv {
     &__photo-frame {
+        position: relative;
         border-radius: 50%;
         overflow: hidden;
         border: 1px solid black;
@@ -156,6 +157,16 @@ h3 {
         display: block;
         height: 100%;
     }
+    &__color-photo {
+        position: absolute;
+        inset: 0;
+        opacity: 0;
+        transition: all .15s ease-in-out;
+    }
+    &__color-photo:hover {
+        opacity: 1;
+    }
+    
 
 
 }
